--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ReMine360 | أعد - تحويل مخلفات التعدين إلى موارد اقتصادية</title>
+    <title>A'id | أعِد - تحويل مخلفات التعدين إلى موارد اقتصادية</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -1343,7 +1343,7 @@
         <div class="container header-container">
 <div class="logo" onclick="showPage('home')">
     <img src="logo.png" alt="ReMine360 Logo" class="logo-image">
-    <span>ReMine360</span> | <span>أعد</span>
+    <span>A'id</span> | <span>أعِد</span>
 </div>
             <nav>
                 <ul>
@@ -1415,7 +1415,7 @@
         <!-- Features Section -->
         <div class="features">
             <div class="container">
-                <h2 class="section-title">مميزات <span>ReMine360</span></h2>
+                <h2 class="section-title">مميزات <span>أعِد</span></h2>
                 <div class="features-grid">
                     <div class="feature-card" onclick="showPage('analyzer')">
                         <div class="feature-icon">
@@ -1456,7 +1456,7 @@
     <section id="login" class="page">
         <div class="container">
             <div class="login-container">
-                <h2 class="login-title">تسجيل الدخول إلى ReMine360</h2>
+                <h2 class="login-title">تسجيل الدخول إلى أعِد</h2>
                 <form id="loginForm">
                     <div class="form-group">
                         <label for="email">البريد الإلكتروني</label>
@@ -1994,7 +1994,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
-                    <h4>ReMine360 | أعد</h4>
+                    <h4>A'id | أعِد</h4>
                     <p style="color: rgba(224, 230, 240, 0.7); margin-bottom: 20px;">منصة ذكية لتحويل مخلفات التعدين إلى موارد اقتصادية مستدامة.</p>
                     <div style="display: flex; gap: 15px;">
                         <a href="#" style="color: var(--primary-green); font-size: 1.2rem;"><i class="fab fa-twitter"></i></a>
@@ -2033,7 +2033,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>© 2023 ReMine360 | أعد. جميع الحقوق محفوظة.</p>
+                <p>© 2025 A'id | أعِد. جميع الحقوق محفوظة.</p>
             </div>
         </div>
     </footer>
